--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,32 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="de.tzwebdesign.TUCMensa"
-      xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="25" android:versionName="0.74">
-    <application android:icon="@drawable/icon2" android:label="@string/app_name">
-        <activity android:name=".TUCMensa"
-                  android:label="@string/Activityname_main"
-                  android:screenOrientation="portrait"
-                  android:configChanges="keyboardHidden|orientation"  >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    android:installLocation="auto"
+    package="de.tzwebdesign.TUCMensa"
+    android:versionCode="25"
+    android:versionName="0.74" >
+
+    <application
+        android:icon="@drawable/icon2"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".TUCMensa"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/Activityname_main"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		
-    <activity android:screenOrientation="portrait" android:name="Preferences" android:label="@string/Activityname_pref"></activity>
-<activity android:name="ListView" android:label="@string/Activityname_listview" android:screenOrientation="portrait"></activity>
-<service android:name="MensaService"/>
-</application>
+        <activity
+            android:name="Preferences"
+            android:label="@string/Activityname_pref"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="ListView"
+            android:label="@string/Activityname_listview"
+            android:screenOrientation="portrait" >
+        </activity>
 
-<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"></uses-sdk>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+        <service android:name="MensaService" />
+    </application>
 
+    <uses-sdk
+        android:minSdkVersion="4"
+        android:targetSdkVersion="8" >
+    </uses-sdk>
 
-
-
-
-
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-
-
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
 
 </manifest>
