--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
     </uses-permission>
 
     <application
-        android:icon="@drawable/icon2"
+        android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
             android:name=".TUCMensa"
